@@ -1,4 +1,10 @@
-﻿drkns 03.04.2016 14:37:41 +0200 - build 4610
+﻿drkns 05.04.2016 21:49:33 +0200 - build 4611
+
+1. При определённых условиях поиск в панели плагина приводил к падению.
+
+2. Пара мелочей.
+
+drkns 03.04.2016 14:37:41 +0200 - build 4610
 
 1. Ещё раз 4609.1.
 
